# PLTI

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cla.yml
src/: elf_util.c  elf_util.h  logging.h  plti.c  plti.h
